# signsense

./: SignSense_Deliverables_Checklist.md  SignSense_Hackathon_Plan.md
backend/: .cursorrules  .env.example  .gitignore  DEV_NOTES.md  agent.py  asl_processor.py  config.py  gesture_buffer.py  instructions.md  main.py  pyproject.toml
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  calls.py  debug.py
backend/scripts/: test_roboflow_inference.py
backend/tests/fixtures/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/components/: animated-counter.tsx  floating-icons.tsx  gesture-display.tsx  gesture-log.tsx  glowing-orb.tsx  particle-field.tsx  pipeline-status.tsx  scroll-reveal.tsx  session-controls.tsx  sign-sense-logo.tsx  status-badge.tsx  transcript-panel.tsx  video-panel.tsx
frontend/hooks/: use-sign-sense.ts
frontend/lib/: api.ts
frontend/src/: App.tsx  globals.css
frontend/src/pages/: AppPage.tsx  IndexPage.tsx
