[project]
name = "signsense-backend"
version = "0.1.0"
description = "SignSense AI - Real-Time ASL Interpreter Backend"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "vision-agents[deepgram,elevenlabs,gemini,getstream]>=0.3.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "stream-chat>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "roboflow>=1.2.14",
    "inference-sdk>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
